[package]
name = "tms"
version = "0.1.0"
edition = "2021"

[package.metadata.details]
title = "Task management system"
tagline = ""
summary = ""
announcement = ""

[dependencies]
#derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
#derive-new = "0.7.0"
#derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["full"] }
#fmt-derive = "0.1.2"
#helpful = { git = "https://github.com/DenisGorbachev/helpful" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }

[package.metadata.cargo-machete]
ignored = ["derive_more"]
