[package]
name = "tms"
version = "0.1.0"
edition = "2021"
description = "A task management system that uses Rust functions to represent the tasks"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/tms"
repository = "https://github.com/DenisGorbachev/tms"
keywords = ["task-management", "utils"]
categories = ["development-tools"]

[package.metadata.details]
title = "Task management system"
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
#derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
#derive-new = "0.7.0"
#derive_builder = "0.20.0"
derive_more = { version = "2.1.0", features = ["full"] }
#fmt-derive = "0.1.2"
#helpful = { git = "https://github.com/DenisGorbachev/helpful" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }

[package.metadata.cargo-machete]
ignored = ["derive_more"]
